# SprintTimer

./: .appveyor.yml  .appveyour.yml  .clang-tidy  .gdb_history  .gitignore  .travis.yml  CMakeLists-datewrapper.txt  CMakeLists.txt  Jenkinsfile  README.md  ROADMAP.txt  SRS.txt  backlog.txt  build_and_run_tests.sh  clang_compile_and_run_tests.sh  clang_tidy_config.yml  compile_and_run_tests.sh  compiler_options.cmake  globalRename.sh  header_template  scratch.tmp  t.session
core/: CMakeLists-cpputest.txt  CMakeLists-datelib.txt  CMakeLists-datewrapper.txt  CMakeLists-gtest.txt  CMakeLists.txt  check_definition.patch
core/src/: AddNewTask.cpp  CSVEncoder.cpp  CSVReader.cpp  CSVWriter.cpp  CommandInvoker.cpp  CompositionObserver.cpp  ComputeByDayStrategy.cpp  ComputeByMonthStrategy.cpp  CoreService.cpp  CountdownTimer.cpp  DateTime.cpp  DecrementTaskSprints.cpp  DeleteTask.cpp  EditTask.cpp  GoalProgress.cpp  GroupByDay.cpp  GroupByMonth.cpp  GroupByWeek.cpp  IncrementTaskSprints.cpp  Observable.cpp  ObservableActionInvoker.cpp  PeriodicBackgroundRunner.cpp  Pomodoro.cpp  PomodoroService.cpp  PomodoroStatistics.cpp  PomodoroTimer.cpp  ProgressOverPeriod.cpp  ProgressProto.cpp  QueryInvoker.cpp  RegisterNewSprint.cpp  RemoveSprintTransaction.cpp  RenameTag.cpp  RequestAllTags.cpp  RequestFinishedTasks.cpp  RequestForDaysBack.cpp  RequestForMonthsBack.cpp  RequestForWeeksBack.cpp  RequestMinMaxYear.cpp  RequestSprintDistribution.cpp  RequestSprints.cpp  (+20 more)
core/tests/: CMakeLists.txt  run_all_tests.cpp  test_add_pomodoro.cpp  test_add_pomodoro_use_case.cpp  test_add_task.cpp  test_core_service.cpp  test_csv_reader.cpp  test_csv_writer.cpp  test_datetime.cpp  test_distribution.cpp  test_increment_spent_pomodoros.cpp  test_increment_task_sprints.cpp  test_pomodoro_service.cpp  test_pomodoro_statistics.cpp  test_pomodoro_timer.cpp  test_remove_pomodoro.cpp  test_remove_pomodoro_use_case.cpp  test_remove_task_transaction.cpp  test_sprint_builder.cpp  test_sprint_statistics.cpp  test_stateful_timer.cpp  test_string_utils.cpp  test_task.cpp  test_task_builder.cpp  test_time_span.cpp  test_todoitem.cpp  test_weekday_selection.cpp
main/: AddSprintDialogProxy.h  AddTaskDialogProxy.h  BestWorkdayPresenterProxy.h  CMakeLists.txt  CacheAwareCommandHandler.h  CacheAwareQueryHandler.h  CommandHandlerDecorator.h  CompositePresenter.h  DateRangeSelectorPresenterProxy.h  DisplayableDialogLifestyleProxy.h  DisplayableLifestyleProxy.h  EditTaskDialogProxy.h  FinishedTasksQueryHandlerSpecialization.h  HistoryWindowProxy.h  ManagedDisplayable.h  ManagedStandaloneDisplayable.h  ManualSprintAddPresenterProxy.h  ObservableConfig.cpp  ProgressMonitorProxy.h  ProgressViewProxy.h  QueryHandlerDecorator.h  RuntimeConfigurableSoundPlayer.h  SettingsDialogLifestyleProxy.h  SettingsWatchingAssetLibrary.h  SprintsForTaskQueryHandlerSpecialization.h  StatisticsWindowProxy.h  SynchronizingActionInvoker.h  TagEditorProxy.h  TaskSprintsViewProxy.h  VerboseCommandHandler.h  WorkScheduleEditorPresenter.cpp  WorkScheduleEditorPresenterProxy.h  main.cpp
qt_common/: CMakeLists.txt
qt_gui/: CMakeLists.txt
qt_gui/resources/: app.qss  mac.qss  resources.qrc
qt_gui/src/: DistributionRequester.cpp  IndexChangedReemitter.cpp  QtConfig.cpp  QtConfig.h  RequestForDaysBack.cpp  RequestForMonthsBack.cpp  RequestForWeeksBack.cpp  SprintRegistrator.cpp  WorkScheduleWrapper.cpp
qt_gui/ui/: add_exceptional_day_dialog.ui  add_sprint_dialog.ui  add_todo_dialog.ui  backup.ui  best_workday_widget.ui  best_worktime_widget.ui  button_menu.ui  daily_timeline_graph.ui  date_pick_dialog.ui  date_range_picker.ui  default_timer.ui  default_timer_widget.ui  expandable_widget.ui  export_dialog.ui  fancy_timer.ui  history.ui  launcher_menu.ui  mainwindow.ui  manual_add_pomodoro_dialog.ui  menu_button_group.ui  pom_cancel_dialog.ui  progress_graphical_widget.ui  progress_widget.ui  settings.ui  sprint_outline.ui  sprints_for_task_view.ui  statistics_widget.ui  statistics_window.ui  tageditor.ui  task_outline.ui  workdays_dialog.ui
qt_storage/: CMakeLists.txt
qt_storage/src/: ConnectionGuard.cpp  DatabaseInitializer.cpp  QtSprintStorageReader.cpp  QtStorageImplementersFactory.cpp  QtTaskStorageReader.cpp  QtTaskStorageWriter.cpp  QtWorkingDaysStorage.cpp  TransactionGuard.cpp  WorkerConnection.cpp
qt_storage_impl/: CMakeLists.txt
qt_storage_impl/src/: ConnectionGuard.cpp  DBService.cpp  Database.cpp  DatabaseError.cpp  DatabaseInitializer.cpp  PomodoroDatabase.cpp  QtOperationalRangeReader.cpp  QtPomoDistributionReader.cpp  QtPomoStorageReader.cpp  QtPomoStorageWriter.cpp  QtPomoYearRangeReader.cpp  QtSprintDistributionReader.cpp  QtSprintStorage.cpp  QtSprintStorageReader.cpp  QtSprintStorageWriter.cpp  QtStorageImplementersFactory.cpp  QtTaskStorage.cpp  QtTaskStorageReader.cpp  QtTaskStorageWriter.cpp  QtWorkingDaysReader.cpp  QtWorkingDaysStorage.cpp  QtWorkingDaysWriter.cpp  QtYearRangeReader.cpp  QueryError.cpp  db_service.cpp
qt_storage_impl/tests/: CMakeLists.txt  run_all_tests.cpp  test_pomodoro_storage.cpp  test_qt_storage_impl.cpp
src/core/: CMakeLists-datewrapper.txt  CMakeLists-threadpool.txt  CMakeLists.txt  DateTime.cpp  DateTime.h  ICommand.h  IPomodoroDailyDistributionReader.h  IPomodoroDistributionReader.h  IPomodoroStorage.h  IPomodoroStorageWriter.h  IPomodoroYearRangeReader.h  PomodoroStatistics.cpp  PomodoroStatistics.h  PomodoroTimer.cpp  PomodoroTimer.h  PomodoroTimerModeScheduler.cpp  PomodoroTimerModeScheduler.h  StringUtils.h  TaskRunner.cpp  TaskRunner.h  TaskScheduler.cpp  TaskScheduler.h  TimeSpan.cpp  TimeSpan.h  Timer.cpp  Timer.h  config.h  (+5 more)
tests/: CMakeLists-gtest.txt  CMakeLists.txt  TestAddTask.cpp  TestAddTask.h  TestCase.cpp  TestCase.h  TestTaskScheduler.cpp  Utils.cpp  Utils.h  main.cpp  run_all_tests.cpp  test_add_pomodoro.cpp  test_datetime.cpp  test_math_utils.cpp  test_pomodoro_gateway.cpp  test_pomodoro_model.cpp  test_pomodoro_statistics.cpp  test_pomodoro_timer.cpp  test_string_utils.cpp  test_task_scheduler.cpp  test_time_interval.cpp  test_todoitem.cpp  test_todoitem_model.cpp
(+1694 files in other folders)
